Fixed CSS not showing up when connected to server. Bit of documentation added; changed module dependencies in package.json: turns out express no longer users body parsers directly, they're separate modules now. Added different banner styles.

--- a/public/stylesheets/login_view.css
+++ b/public/stylesheets/login_view.css
@@ -19,7 +19,7 @@ body{
 .banner{
   width:inherit;
   height:175px;
-  background:url('../resources/images/sentinel_web_banner_3.png')
+  background:url('../resources/images/sentinel_web_banner_3.png');
 }
 
 #login-module{
